Alignment fixed

--- a/src/loanOverview/Documents.css
+++ b/src/loanOverview/Documents.css
@@ -8,8 +8,8 @@
   cursor: pointer;
   width: 110px;
   height: 35px;
-  background-color: #0744d3;
-  color: white;
-  border: none;
+  background-color: white;
+  color: black;
+  border: 1px solid #83a1e8;
   border-radius: 0.2rem;
 }
