--- a/src/loanOverview/LoanApplications.css
+++ b/src/loanOverview/LoanApplications.css
@@ -10,5 +10,5 @@
     width: 200px;
     height:40px;
     border-radius: 0.5rem;
-    border: 1px solid grey;
+    border: 1px solid #83a1e8;
 } 
