--- a/src/loanOverview/LoanDoc.css
+++ b/src/loanOverview/LoanDoc.css
@@ -62,6 +62,7 @@
     padding-bottom: 5px;
     font-size: 10px;
     width: 698px;
+    margin-top: 20px;
 }
 
 .data-input {
